# transport_mpc

./: CMakeLists.txt  README.md  initializer.py  package.xml  run_tracking_cen.py  run_tracking_compare.py  run_tracking_decen.py
launch/: start_controller_cen.launch.py  start_controller_decen.launch.py
log/: latest_list
scripts/: start_controller.py  start_controller_decen.py
transporter/controllers/: mpcc_2D.py  nonlinear_mpc.py  nonlinear_mpc_2D.py  nonlinear_mpc_2D_decen.py  nonlinear_mpc_actual.py  nonlinear_mpc_old.py  nonlinear_mpc_opti.py  nonlinear_mpc_opti_3A.py  nonlinear_mpc_opti_3A_decen.py
transporter/models/: centralize_model.py  centralize_model_2D.py  centralize_model_3A.py  decentralize_model_2D.py  decentralize_model_3A.py
transporter/simulators/: simulation_tracking.py  simulation_tracking_2D.py  simulation_tracking_2D_decen.py  simulation_tracking_3A.py  simulation_tracking_3A_decen.py  visualizer.py
transporter/utils/: function.py  path_generator.py  plotter.py
